Configurando o arquivo database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -21,6 +21,9 @@ default: &default
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
+  username: aula_rails
+  password: 12345678
+
 development:
   <<: *default
   database: aula_rails_development
